# SDUOG-sim2sim-webots

./: CMakeLists.txt  README.md  cmake_install.cmake
SDK/: motor_SDK.cpp  motor_SDK.h  webots_sim_SDK.cpp  webots_sim_SDK.h
deploy/deploy_lcm/: 1.py  actions_publish.py  model_test.py  obs_subscribe.py  policy_jit.pt  robot_deploy.py  流程伪代码.py
deploy/deploy_lcm/msg_lcm/: actions.lcm  example_t.lcm  obs.lcm
deploy/deploy_lcm/msg_lcm/robot_control/: __init__.py  actions_lcmt.hpp  actions_lcmt.py  obs_lcmt.hpp  obs_lcmt.py
deploy/deploy_lcm/msg_lcm/robot_control/exlcm/: example_t.hpp
deploy/models/: events.out.tfevents.1741245940.satan-Legion-Y7000P-IRX9.10779.0  policy_1.pt
include/: controller_listener.h  data_logger.h  lcm_handler.h  robot_model.h  robot_model.txt  state_estimator.h  state_estimator.txt  terrain_estimator.h  terrain_estimator.txt  utils.h
src/: controller_listener.cpp  data_logger.cpp  lcm_handler.cpp  main.cpp  robot_model.cpp  robot_model.txt  state_estimator.cpp  state_estimator.txt  terrain_estimator.cpp  terrain_estimator.txt  utils.cpp
world/: SDUOG-sim2sim.wbt
